--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Tags in Blog
-image: 10.jpg
+title: Tags
+images: [tags.jpg, 01.jpg, 02.jpg]
 permalink: /tags/
 ---
 {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
