first post entry

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Page not found
-image: 04.jpg
+title: Página no encontrada
+images: [error.jpg]
 permalink: /404.html
 ---
 
@@ -9,8 +9,8 @@ permalink: /404.html
   <div class="row">
     <div class="col col-12" style="text-align: center">
       <h2>404</h2>
-      <p>The requested page could not be found.</p>
-      <p><a href="{{site.baseurl}}/">Back to the Blog</a></p>
+      <p>La página solicitada no ha sido encontrada, pero puedes encontrar más contenido dentro del blog.</p>
+      <p><a href="{{site.baseurl}}/"><strong>Volver al Blog</strong></a></p>
     </div>
   </div>
 </div>
